--- a/src/pages/posts/20230103_new_year.md
+++ b/src/pages/posts/20230103_new_year.md
@@ -1,8 +1,8 @@
 ---
 layout: ../../layouts/MarkdownPostLayout.astro
-title: "2023 New Year"
-pubDate: "2023-01-03"
-description: "2023 年の目標とか"
+title: '2023 New Year'
+pubDate: '2023-01-03'
+description: '2023 年の目標とか'
 ---
 
 2023 年上半期の目標を立ててみたので、その記録と実行。
