fix layout problem

--- a/src/content/blog/20230128.md
+++ b/src/content/blog/20230128.md
@@ -19,8 +19,7 @@ pubDate: '2023-01-28'
 $ yarn upgrade --latest
 ```
 
-最終的な package.json のアウトプットはこんな感じになった。
-https://github.com/t0yohei/blog-no-name/pull/2/files#diff-7ae45ad102eab3b6d7e7896acd08c427a9b25b346470d7bc6507b6481575d519L14
+最終的な package.json のアウトプットは[こんな感じ](https://github.com/t0yohei/blog-no-name/pull/2/files#diff-7ae45ad102eab3b6d7e7896acd08c427a9b25b346470d7bc6507b6481575d519L14)になった。
 
 ## Content Collections の適用
 
@@ -51,8 +50,7 @@ https://docs.astro.build/en/guides/content-collections/#building-for-server-outp
 
 自分の場合、 SSR を設定していたので後者のやり方になった。また、Markdown ファイルの方で layout コンポーネントを設定していたが、この実装になるのであれば `src/pages/posts/[slug].astro` ファイルの方に実装した方がシンプルになりそうなので、その修正も追加した。
 
-最終的には下記のような感じ(プルリクエストに不要な変更が混ざっちゃっているけどまあご愛顧)
-https://github.com/t0yohei/blog-no-name/pull/2/files#diff-7e8e8cf08da91314c48dd6ad6fcf5894b1489d90d39bc942ceb475124e93d6b4
+最終的には[こんな感じ](https://github.com/t0yohei/blog-no-name/pull/2/files#diff-7e8e8cf08da91314c48dd6ad6fcf5894b1489d90d39bc942ceb475124e93d6b4)(プルリクエストに不要な変更が混ざっちゃっているけどまあご愛顧)
 
 ## 余談
 
