update img width for responsive

--- a/src/content/blog/20230909.md
+++ b/src/content/blog/20230909.md
@@ -19,6 +19,6 @@ pubDate: '2023-09-09'
 
 [View Transisions API の Browser compatibility](https://developer.mozilla.org/en-US/docs/Web/API/View_Transitions_API#browser_compatibility) を見る感じ、2023/09/09 時点でこの API をサポートしている主要ブラウザは、残念ながら Chromium 系のものに限るとのこと。
 
-<img src="https://pbs.twimg.com/media/F5j-1b8bMAAtvlZ?format=png&name=900x900">
+<img src="https://pbs.twimg.com/media/F5j-1b8bMAAtvlZ?format=png&name=900x900" width=80%>
 
 そのため Astro の View Transitions がきちんと機能するのも、現状 Chromium 系のブラウザに限る模様。ただ View Transisions API がサポートされていないブラウザに対しても、fallback support やその挙動を調整する [Fallback controll](https://docs.astro.build/en/guides/view-transitions/#fallback-control) の機能が用意されているらしく、安心して使えそうな感じだった。
