exec auto fix textlint

--- a/src/content/blog/20230119.md
+++ b/src/content/blog/20230119.md
@@ -28,7 +28,7 @@ pubDate: '2023-01-18'
 日常生活に通ずるものはないかなーと考えてみると、そういえば最近は壊れにくくて、そこそこいい機能が備わっているものを買うようになっている。家電とか。
 
 なぜかというと、買い替えをしたくないのである。買い替えが面倒なのだ。
-壊れやすいものだともちろん買い替えが必要だし、安物買いの銭失い的なものでもやはり買い替えたくなる。そういうのが嫌で、一回の買い物で長らく買い替えから解放されたいという怠惰。
+壊れやすいものだともちろん買い替えが必要だし、安物買いの銭失い的なものでもやはり買い替えたくなる。そういうのが嫌で、1回の買い物で長らく買い替えから解放されたいという怠惰。
 
 プログラミングも、家電の買い換えも、怠惰の故に行き着いた結論という共通点がありそうだった。
 
