--- a/src/content/blog/20230128.md
+++ b/src/content/blog/20230128.md
@@ -5,7 +5,7 @@ pubDate: '2023-01-28'
 
 2023/01/23 に [Astro v2 がリリースされた](https://astro.build/blog/astro-2/)ので、このサイトも v2 にアップグレードしてみた。
 
-また目玉機能の一つに [Content Collections](https://astro.build/blog/introducing-content-collections/) が追加されたらしいので、それも適用してみた。
+また目玉機能の1つに [Content Collections](https://astro.build/blog/introducing-content-collections/) が追加されたらしいので、それも適用してみた。
 
 ## Astro v2 へのアップグレード
 
