fix textlint error

--- a/src/content/blog/20230103_new_year.md
+++ b/src/content/blog/20230103_new_year.md
@@ -7,7 +7,7 @@ pubDate: '2023-01-03'
 
 ## 目標
 
-目標は以下の通り
+目標は以下の通り。
 
 - 他者と積極的に関わる
 - ブログサービスを作って適当に運用する
@@ -20,4 +20,4 @@ pubDate: '2023-01-03'
 
 リポジトリは [こちら](https://github.com/t0yohei/blog-no-name)。
 
-目標にある通り適当に運用していけたらと思う。
+目標にある通り適当に運用していけたらと。
