--- a/src/content/blog/20230119.md
+++ b/src/content/blog/20230119.md
@@ -13,7 +13,7 @@ pubDate: '2023-01-18'
 そう、メンテがだるいのである。
 メンテは主にバージョンアップのことを指しているが、そのライブラリ自体のバージョンアップに限らず、フレームワークのバージョンが上がったのにライブラリはそれに追従してなくて、自サービス内でのフレームワークアプデの邪魔になるとか色々。
 
-高機能であればあるほど自分が使っていない機能の改修でアプデが入るし、破壊的変更を入れてどんどん改良してくれるし(自分達はほとんど使っていないのに関わらずというのが重要)、高機能であるが故にライブラリ自体がフレームワークのバージョンアップに追従するのも大変で対応バージョンの公開が遅くなったり。
+高機能であればあるほど自分が使っていない機能の改修でアプデが入るし、破壊的変更を入れてどんどん改良してくれるし(自分達はほとんど使っていないのに関わらずというのが重要)。また、高機能であるが故にライブラリ自体がフレームワークのバージョンアップに追従するのも大変で対応バージョンの公開が遅くなったり。
 
 自分は Vue3 のアプデ対応で色々思い知った口だけど、似たような話はプログラミングの歴史で繰り返されてきている気がする。
 
@@ -21,14 +21,14 @@ pubDate: '2023-01-18'
 
 なので、可能な限りフレームワーク非依存で作りたい。とは言っても言語レベルでの仕様変更もあったりで完全に仕様追従のためのメンテからは解放されないが、それでも更新の手間暇は少なく済むはず。
 
-というわけで、後で拡張される余地を残しつつ、今必要になっているものだけをシンプルに作るというのが良いと思うようになってきている。やっぱり機能が物足りないとなったら、自分か必要になった人によしなに追加してもらおうという具合。YAGNI、YAGNI。
+というわけで、後で拡張される余地を残しつつ、今必要になっているものだけをシンプルに作るというのが良いと考えるようになってきている。やっぱり機能が物足りないとなったら、自分か必要と感じた人によしなに追加してもらおうという具合。YAGNI、YAGNI。
 
 ## 何に通づるか
 
 日常生活に通ずるものはないかなーと考えてみると、そういえば最近は壊れにくくて、そこそこいい機能が備わっているものを買うようになっている。家電とか。
 
 なぜかというと、買い替えをしたくないのである。買い替えが面倒なのだ。
-壊れやすいものだともちろん買い替えが必要だし、安物買いの銭失い的なものでもやはり買い替えたくなる。そういうのが嫌で、1回の買い物で長らく買い替えから解放されたいという怠惰。
+壊れやすいものだともちろん買い替えが必要だし、安物買いの銭失い的なものでもやはり買い替えたくなる。そういうのが嫌で、1 回の買い物で長らく買い替えから解放されたいという怠惰。
 
 プログラミングも、家電の買い換えも、怠惰の故に行き着いた結論という共通点がありそうだった。
 
@@ -38,4 +38,4 @@ pubDate: '2023-01-18'
 
 後から拡張すればどうにかなるとは思っているが、最初からリッチな UI フレームワークなどをつっこんでいれば今より幾分マシな見た目になっていそうではある。
 
-ブラウザが勝手にめっちゃいい感じの見た目に整えてくれればいいのだけど、今はそうなってくれないので何か方法考えないと。できればライブラリとかはあまり入れたくないけど、自分で CSS をたくさん書くのも何か違うなという気もする...。どうしたものか
+ブラウザが勝手にめっちゃいい感じの見た目に整えてくれればいいのだけど、今はそうなってくれないので何か方法考えないと。できればライブラリとかはあまり入れたくないけど、自分で CSS をたくさん書くのも何か違うなという気もする...。どうしたものか。
