--- a/src/content/blog/20230128.md
+++ b/src/content/blog/20230128.md
@@ -5,7 +5,7 @@ pubDate: '2023-01-28'
 
 2023/01/23 に [Astro v2 がリリースされた](https://astro.build/blog/astro-2/)ので、このサイトも v2 にアップグレードしてみた。
 
-また目玉機能の1つに [Content Collections](https://astro.build/blog/introducing-content-collections/) が追加されたらしいので、それも適用してみた。
+また目玉機能の 1 つに [Content Collections](https://astro.build/blog/introducing-content-collections/) が追加されたらしいので、それも適用してみた。
 
 ## Astro v2 へのアップグレード
 
@@ -23,7 +23,7 @@ $ yarn upgrade --latest
 
 ## Content Collections の適用
 
-Markdown ファイルに型がつけれて嬉しくなる機能、とのことでせっかくなので適用してみた。
+Markdown ファイルに型をつけることができて嬉しくなる機能、とのことでせっかくなので適用してみた。
 
 公式ドキュメントと、先に Content Collections を適用されていた方のブログを参考にさせていただいた。ありがとうございます。
 
