--- a/src/content/blog/20231217.md
+++ b/src/content/blog/20231217.md
@@ -7,9 +7,9 @@ pubDate: '2023-12-17'
 
 とあるアニメファンのアニメ遍歴をざっとまとめてみました。
 
-## 幼年期(1993〜2007)
+## 幼年期
 
-- アニメを見ることが目的ではなく、見たいコンテンツがアニメだった時代
+- アニメを見ることが目的ではなく、**見たいコンテンツがアニメ**だった時代
 - 小学生〜中学生前半
 - 夕方にテレビでリアタイ視聴
 
@@ -19,11 +19,11 @@ pubDate: '2023-12-17'
 - ガンダム
 - 鋼の錬金術師
 
-## 少年期(2007)
+## 少年期
 
 - 深夜アニメを知ってしまった時代
-- きっかけは、幼馴染が「涼宮ハルヒの憂鬱」にハマったと聞いて見始めた「灼眼のシャナ」
 - 中学 3 年
+- きっかけは、幼馴染が「涼宮ハルヒの憂鬱」にハマったと聞いて見始めた「灼眼のシャナ」
 - 最初はテレビ録画で視聴。そのうち夜な夜な起き出してリアタイ視聴
 - 田舎住みのせいで見られるアニメが少なかった
 
@@ -32,9 +32,8 @@ pubDate: '2023-12-17'
 - 灼眼のシャナ
 - 大江戸ロケット
 - CLANNAD
-- ななついろ★ドロップス
 
-## 暗黒期(2008〜2011)
+## 暗黒期
 
 - 高校時代
 - 朝 6 時起きで通学してたこともあって深夜のリアタイ視聴ができず、録画視聴がメイン
@@ -46,13 +45,12 @@ pubDate: '2023-12-17'
 - Angel Beats! (神)
 - 化物語
 
-## 黄金時代(2011〜2017)
+## 黄金時代
 
 - 大学生時代
 - アニメを見ることが一般化して、その辺の大学生が普通に見てるレベルになった
 - 暇だったので、過去の人気アニメの一気見もたくさんした時代
 - メジャーなアニメは一通り見たことがあるってレベルになった
-- PC でのネット視聴が主
 
 ### 主な視聴アニメ
 
@@ -60,15 +58,17 @@ pubDate: '2023-12-17'
   - 魔法少女まどか☆マギカ
   - ソードアート・オンライン
   - 氷菓
+  - PSYCHO-PASS
   - リトルウィッチアカデミア
-  - etc...
 - 過去アニメ
   - BLACK LAGOON
   - とらドラ！
   - らき☆すた
-  - etc...
+  - 攻殻機動隊
+  - カウボーイビバップ
+  - 天元突破グレンラガン
 
-## 安定期(2017〜)
+## 安定期
 
 - 社会人時代
 - 毎クール、2・3 個のアニメを視聴(それ以上はキャパオーバーで見られない)
@@ -82,7 +82,6 @@ pubDate: '2023-12-17'
 - 無職転生
 - 葬送のフリーレン
 - シャングリラ・フロンティア
-- etc...
 
 ## 一番好きなアニメ(一番思い入れのあるアニメ)
 
@@ -90,19 +89,30 @@ pubDate: '2023-12-17'
 
 - 面白かったのはもちろん、自身のアニメファン人生においてとても重要な作品
 - アニメを作る側に目を向けるようになった
+
   - 吉成曜さん(監督)(神)
   - TRIGGER(アニメーションスタジオ)
-- 今まで何となしに楽しんでいたアニメは、アニメーターなどの作り手がいて、その人たちの努力やこだわりによって名作が世に放たれている
+
+- 名作アニメにはアニメーターなどの作り手がいて、その人たちの**努力やこだわり**によって世に放たれている
   - 参考: [その時、魔法は生まれる～リトルウィッチアカデミア制作日誌～](https://youtu.be/ooaDf1llA7E?si=-h0S-G2o6OGrtTum)
-- システム開発とアニメ作りは結構似ていると思い、アニメーターに対し勝手にシンパシーを感じる
-- (作品は、主人公の性格に若干癖があるので万人におすすめではない)
+- システム開発とアニメ作りはどこか似ている...？
 
 ### 信じる心が、みんなの魔法なんだ！
 
-- 物理法則などの理が支配している世界において、アニメの魔法で原則を捻じ曲げて描くことができる
-- エンジニアリングにおいても、十分に発達した科学技術は、魔法と見分けがつかない
-- ただ魔法に見えるものは、実は作り手の地道な努力とこだわりによって作り出されている
-- 「本当に世界を変えられるなら、私は皆が笑いあえる世界に変えたい！」
-- 強い魔法使いになって、世界をもっといいものにしていきたいね
+- アニメにおける魔法は、**物理法則などの制約を上手く騙して描く**ことで、現実ではあり得ないことを映像の中で表現すること
+- システム開発における魔法は、**コンピュータという妖精さんを上手く使役する**ことで、人間だけでは難しいことを実現すること
+
+※ 個人の解釈です
+
+### 同じ「魔法」だけど
+
+- アニメとシステム開発では、魔法の方向性が全然違う
+- ただ、作り手の地道な努力とこだわりによって魔法が実現されているという点は同じ
+- 魔法の方向性は全然違うけど、根っこの部分は実は結構近い？
+
+### 本当に世界を変えられるなら、私は皆が笑いあえる世界に変えたい！
+
+- アニメ年表を話すつもりが、最後若干迷走した気がするけどつまりそういうこと(?)
+- 強い魔法使いになって、楽しく生きたいね
 
 終わり。
