improve: rename pubDate to pubdate

--- a/src/content/blog/20230128.md
+++ b/src/content/blog/20230128.md
@@ -1,6 +1,6 @@
 ---
 title: 'Astro v2 へのアップグレードと、Content Collections の適用'
-pubDate: '2023-01-28'
+pubdate: '2023-01-28'
 ---
 
 2023/01/23 に [Astro v2 がリリースされた](https://astro.build/blog/astro-2/)ので、このサイトも v2 にアップグレードしてみた。
