--- a/src/content/blog/20231104.md
+++ b/src/content/blog/20231104.md
@@ -1,6 +1,6 @@
 ---
 title: 'VueFes Japan 2023 LT 登壇 & ボランティアスタッフ参加振り返り'
-pubDate: '2023-11-04'
+pubdate: '2023-11-04'
 ---
 
 VueFes Japan 2023 に LT 登壇 & ボランティアスタッフ参加をしたのでその振り返り。
