--- a/src/content/blog/20231217.md
+++ b/src/content/blog/20231217.md
@@ -1,6 +1,6 @@
 ---
 title: '私のアニメ年表'
-pubDate: '2023-12-17'
+pubdate: '2023-12-17'
 ---
 
 この記事は、[アニメについて熱く語る Advent Calendar 2023](https://adventar.org/calendars/8772) 17 日目の記事です。
