--- a/src/content/blog/20241223.md
+++ b/src/content/blog/20241223.md
@@ -1,6 +1,6 @@
 ---
 title: 'Astro 5 への更新と Content Layer API への移行'
-pubDate: '2024-12-23'
+pubdate: '2024-12-23'
 ---
 
 Astro v5.0 がリリースされていたのでこのサイトのバージョンも最新に更新した。
