--- a/src/content/blog/20241224.md
+++ b/src/content/blog/20241224.md
@@ -1,10 +1,9 @@
 ---
 title: '退職しました'
-pubDate: '2024-12-24'
+pubdate: '2024-12-24'
 ---
 
 先日、約6年3カ月勤めていた会社を退職しました。
-
 
 <div style="display: flex; justify-content: center;"> 
   <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">最終出社でした。<br>約6年間お世話になりました！！！ <a href="https://t.co/sgKpKaVwWI">pic.twitter.com/sgKpKaVwWI</a></p>&mdash; とよへい (@t0yohei) <a href="https://twitter.com/t0yohei/status/1870123791197843630?ref_src=twsrc%5Etfw">December 20, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -37,7 +36,7 @@ pubDate: '2024-12-24'
 個人事業主を選んだのは、
 
 - 色んな会社のシステムに触れて、アーキテクチャに関する知見を深めたい
-- 正社員の良さ・悪さを知ったので、個人事業主の良さ・悪さを体験してみたい 
+- 正社員の良さ・悪さを知ったので、個人事業主の良さ・悪さを体験してみたい
 
 というのが主な理由です。
 
